# TurretReplit

./: .gitignore  README.md  index.html  replit.nix  sketch.js  start.sh
backend/: pyproject.toml  server.py
lib/: background.js  config.js  effects.js  enemy.js  game.js  path.js  shop.js  turret.js  utils.js
lib/css/: style.css
scripts/: generate_laser.py  generate_soundtrack.py
