[tool.poetry]
name = "turretdefense-backend"
version = "0.1.0"
description = "Backend server for Turret Defense game"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

